# sql_alchemy_hw

./: alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: d732a8c34bc5_init.py
