[tool.poetry]
name = "sql-alchemy"
version = "0.1.0"
description = ""
authors = ["Dima <fialkofskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_alchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.11"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
